# Kokoros

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: build.yml  package-release.yml  release.yml
checkpoints/: kokoro-v1.0.onnx.sha256
data/: voices-v1.0.bin.sha256
koko/: Cargo.toml
koko/src/: main.rs
kokoros/: Cargo.toml
kokoros-openai/: Cargo.toml
kokoros/src/: lib.rs  model.rs
kokoros/src/onn/: ort_base.rs  ort_koko.rs
kokoros/src/tts/: koko.rs  mod.rs  normalize.rs  tokenize.rs
kokoros/src/utils/: mod.rs
