[package]
name = "kokoros"
version = "0.3.0"
edition = "2024"

[dependencies]
espeak-rs = "0.1.9"
hound = "3.5.1"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.11.1"
ndarray-npy = "0.9.1"
tracing = "0.1"

# Base ONNX Runtime configuration
ort = { version = "2.0.0-rc.10", default-features = true }

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
